# miniprojekti

./:   .gitignore  .pylintrc  Miniprojekti.py  README.md  license.txt  log.html  output.xml  pyproject.toml  report.html  retro.md  retro2sprintti.md
.github/workflows/: main.yml
src/: HakuLibrary.py  Komentorivisovellus.py  MiniprojektiLibrary.py  acm.py  database.py  komentorivisovellus.py  konsoli_io.py  listaus.py  main.py  poisto.py  stub_db.py  stub_io.py  viite.py  viite_repo.py
src/tests/: database_test.py  hakeminen.robot  lisaaminen.robot  lisays_test.py  listaaminen.robot  listaus_test.py  miniprojekti.robot  poistaminen.robot  poisto_test.py  viite_repo_test.py  viite_test.py
