[project]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = [
    {name = "Karlo",email = "kirskaxt@student.jyu.fi"},
    {name = "Touko", email = "touko.j.hanninen@student.jyu.fi"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "miniprojekti", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "coverage (>=7.12.0,<8.0.0)"
]
